# -

AI_Smart_Watch/: CHANGELOG.md  Hardware_Design.md  generate_schematic.py  verify.py
AI_Smart_Watch/AI_Smart_Watch/: CHANGELOG.md  Hardware_Design.md  check_syntax.py
AI_Smart_Watch/AI_Smart_Watch/firmware/rust/: Cargo.toml  build.rs  partitions.csv  rust-toolchain.toml
AI_Smart_Watch/AI_Smart_Watch/firmware/rust/src/: main.rs
AI_Smart_Watch/AI_Smart_Watch/firmware/src/: main.cpp
AI_Smart_Watch/AI_Smart_Watch/simulation/: main.ino  simulate.py
AI_Smart_Watch/firmware/: platformio.ini
AI_Smart_Watch/firmware/rust/: README_RUST.md  sdkconfig.defaults
AI_Smart_Watch/firmware/src/: main.cpp
AI_Smart_Watch/simulation/: diagram.json  main.ino  simulate.py  wokwi.toml
AI_Smart_Watch/wokwi_test/: package-lock.json  package.json
