# ╔══════════════════════════════════════════════════════════════╗
# ║  AI Smart Watch — Rust 固件项目配置                          ║
# ║  目标平台: ESP32-S3-Zero (Waveshare)                        ║
# ║  运行时:   ESP-IDF (esp-idf-hal + esp-idf-svc)              ║
# ╚══════════════════════════════════════════════════════════════╝

[package]
name = "ai-smart-watch"
version = "1.0.0"
edition = "2021"
description = "AI Smart Watch firmware for ESP32-S3-Zero"
authors = ["AI Watch Team"]
license = "MIT"

# ═══════════════════════════════════════════════════════════════
# 依赖库
# ═══════════════════════════════════════════════════════════════

[dependencies]
# --- ESP-IDF 平台抽象层 ---
# esp-idf-hal: GPIO / SPI / I2C / I2S / ADC / LEDC 硬件抽象
# 提供 embedded-hal 标准 trait 实现，可与通用 Rust 嵌入式库互通
esp-idf-hal = "0.44"

# --- ESP-IDF 系统服务 ---
# esp-idf-svc: WiFi / HTTP Client / NVS / 定时器 / 事件循环
# 用于 AI API 网络通信 (后续集成)
esp-idf-svc = "0.49"

# --- ESP-IDF 系统绑定 ---
# esp-idf-sys: 底层 ESP-IDF C 库的 Rust FFI 绑定
# 通过 build.rs 自动下载/链接 ESP-IDF
esp-idf-sys = "0.35"

# --- 嵌入式图形库 ---
# embedded-graphics: 纯 Rust 2D 图形库，无动态分配
# 支持 画点/线/圆/矩形/文字/图片
# 与 ST7789 驱动通过 DrawTarget trait 集成
embedded-graphics = "0.8"

# --- 嵌入式文本渲染 ---
# 提供内置的 6×8 / 8×16 等位图字体
# 中文渲染后续使用 embedded-graphics 的 BDF 字体或转为图片
embedded-text = "0.6"

# --- SPI 显示接口抽象 ---
# 将 embedded-hal 的 SPI 总线封装为 display-interface 标准 trait
# 此 crate 是 embedded-hal SPI 与 mipidsi 之间的桥梁
display-interface-spi = "0.5"

# --- MIPI DSI 显示驱动 ---
# 支持 ST7789 / GC9A01 / ILI9341 等常见 SPI 显示屏控制器
# 自动处理初始化序列、像素格式转换、区域更新
mipidsi = "0.8"

# --- BME280 环境传感器驱动 ---
# 纯 Rust 实现，基于 embedded-hal I2C trait
# 读取 温度(°C) / 湿度(%RH) / 气压(hPa)
bme280 = "0.3"

# --- DS3231 实时时钟驱动 ---
# I2C 接口，精度 ±2ppm
ds323x = "0.2"

# --- 数值处理 ---
# 用于传感器读数的 NaN 检查等浮点操作
libm = "0.2"

# --- 无堆数据结构 ---
# 用于固定大小字符串、队列等，避免动态分配
heapless = "0.8"

# --- 序列化/反序列化 ---
# JSON 处理 (AI API 通信)
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }

# --- 日志 ---
# 使用 Rust log facade + ESP-IDF 后端
log = "0.4"
esp-idf-svc-log = "0.1"

# --- 时间类型 ---
# ds323x crate 依赖 chrono 的 NaiveDateTime
chrono = "0.4"

# --- 错误处理 ---
anyhow = "1"

# ═══════════════════════════════════════════════════════════════
# 构建依赖 (build.rs 使用)
# ═══════════════════════════════════════════════════════════════
[build-dependencies]
embuild = "0.32"     # ESP-IDF 构建系统 Rust 封装

# ═══════════════════════════════════════════════════════════════
# 编译配置
# ═══════════════════════════════════════════════════════════════

[profile.release]
# 优化: 体积优先 (手表固件需要控制固件大小)
opt-level = "s"
lto = true          # 链接时优化 — 减少最终二进制体积
codegen-units = 1   # 单代码生成单元 — 更好的内联和优化
debug = false       # 发布版不包含调试信息

[profile.dev]
# 开发构建: 编译速度优先
opt-level = 0
debug = true
